--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <body>
     <header class="page-header">
       <div class="container">
-        <p>Phone: +38 (097) 682 73 68<br>
-        E-email: gukalov.v@ukr.net<br>
-        GitHub: https://github.com/Vitaliy-1809<br>
-        Facebook: https://www.facebook.com/gukalov.v<br>
-        LinkedIn: https://www.linkedin.com/in/vitaliy-gukalov/</p>
+        <a class="header-email" href="mailto:gukalov.v@ukr.net">gukalov.v@ukr.net</a>
+        <a class="header-phone" href="tel:+380976827368">+38 (097) 682 73 68</a>
+        <a class="header-github" href="https://github.com/Vitaliy-1809">GitHub</a>
+        <a class="header-facebook" href="https://www.facebook.com/gukalov.v">Facebook</a>
+        <a class="header-linkedin" href="https://www.linkedin.com/in/vitaliy-gukalov/">LinkedIn</a>
       </div>
     </header>
 
@@ -28,6 +28,9 @@
     <section class="intro">
       <div class="container">
         <h2 class="subheading">Давайте познакомимся</h2>
+        <figure class="user-image">
+          <img src="files/user.jpg" width="928" alt="Vitaliy Gukalov">
+        </figure>
         <h3>Пара слов о себе</h3>
         <p>Текст с парой слов о себе.</p>
         <h3>Чем могу быть полезен</h3>
@@ -38,10 +41,12 @@
     <section class="portfolio">
       <div class="container">
         <h2 class="subheading">Мои работы</h2>
-
+        <figure class="project-image">
+          <img src="files/project.jpg" width="928" height="536" alt="Cайт инструктора Кекса">
+        </figure>
         <h3>Сайт инструктора Кекса</h3>
         <p>Небольшой лендинг о школе для начинающих.</p>
-
+        <a class="button" href="source/project/index.html">Открыть страницу</a>
         <h3>Блог начинающего верстальщика</h3>
         <p>Статический блог про обучение HTML и CSS.</p>
       </div>
@@ -49,11 +54,11 @@
 
     <footer class="page-footer">
       <div class="container">
-        <p>Phone: +38 (097) 682 73 68<br>
-        E-email: gukalov.v@ukr.net<br>
-        GitHub: https://github.com/Vitaliy-1809<br>
-        Facebook: https://www.facebook.com/gukalov.v<br>
-        LinkedIn: https://www.linkedin.com/in/vitaliy-gukalov/</p>
+        <a class="footer-email" href="mailto:gukalov.v@ukr.net">gukalov.v@ukr.net</a>
+        <a class="footer-phone" href="tel:+380976827368">+38 (097) 682 73 68</a>
+        <a class="footer-github" href="https://github.com/Vitaliy-1809">GitHub</a>
+        <a class="footer-facebook" href="https://www.facebook.com/gukalov.v">Facebook</a>
+        <a class="footer-linkedin" href="https://www.linkedin.com/in/vitaliy-gukalov/">LinkedIn</a>
       </div>
     </footer>
   </body>
