final edits on the site

--- a/index.html
+++ b/index.html
@@ -31,10 +31,24 @@
         <figure class="user-image">
           <img src="files/user.jpg" width="928" alt="Vitaliy Gukalov">
         </figure>
-        <h3>Пара слов о себе</h3>
-        <p>Текст с парой слов о себе.</p>
-        <h3>Чем могу быть полезен</h3>
-        <p>Текст о том, чем могу быть полезен.</p>
+        <div>
+          <h3>Пара слов о себе</h3>
+          <p>Меня зовут Виталий, мне 36 лет. Киевлянин.<br> Работаю в сфере маркетинга. Дополнительно осваиваю профессию <b>frontend developer.</b><br>
+          На этой страничке указан мой текущий прогресс.</p>
+        </div>
+        <div>
+          <h3>Чем могу быть полезен</h3>
+          <p>Выполнение задач по верстке в рамках моих компетенций.</p>
+        </div>
+        <div class="skills">
+          <h3>Мои навыки</h3>
+          <dl class="skills-list">
+            <dt class="skill-html">HTML</dt>
+            <dd class="level"><div style="width: 60%;">60%</div></dd>
+            <dt class="skill-css">CSS</dt>
+            <dd class="level"><div style="width: 40%;">40%</div></dd>
+          </dl>
+        </div>
       </div>
     </section>
 
@@ -47,8 +61,12 @@
         <h3>Сайт инструктора Кекса</h3>
         <p>Небольшой лендинг о школе для начинающих.</p>
         <a class="button" href="source/project/index.html">Открыть страницу</a>
+        <figure class="project-image">
+          <img src="files/project2.png" width="928" height="536" alt="Блог начинающего верстальщика">
+        </figure>
         <h3>Блог начинающего верстальщика</h3>
         <p>Статический блог про обучение HTML и CSS.</p>
+        <a class="button" href="source/project6/index.html">Открыть блог</a>
       </div>
     </section>
 
