--- a/source/project/index.html
+++ b/source/project/index.html
@@ -7,6 +7,9 @@
   </head>
   <body>
     <div class="container">
+      <nav class="blog-navigation">
+        <a href="https://vitaliy-1809.github.io/my-site/">На главную</a>
+      </nav>
       <header class="site-header">
         <h1>Инструктор Кекс</h1>
         <p>Обучение начинающих котят</p>
