--- a/source/project6/index.html
+++ b/source/project6/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <nav>
+      <a href="https://vitaliy-1809.github.io/my-site/">На главную</a>
+    </nav>
     <header>
       <h1 class="page-title">Блог начинающего верстальщика</h1>
     </header>
