--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
-<html prefix="og: http://ogp.me/ns#">
+<html lang="ru" prefix="og: http://ogp.me/ns#">
   <head>
     <meta charset="UTF-8">
     <title>Портфолио Junior верстальщика</title>
@@ -9,7 +8,7 @@
     <meta property="og:url" content="https://vitaliy-1809.github.io/my-site/">
     <meta property="og:image" content="https://vitaliy-1809.github.io/my-site/files/user.jpg">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Old+Standard+TT&display=swap&subset=cyrillic">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700%7COld+Standard+TT&display=swap&subset=cyrillic">
   </head>
 
   <body>
